# cli

./: .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ENHANCED_FEATURES_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PYTHON.md  IMPLEMENTATION_PLAN_PYTHON_PART2.md  Makefile  PHASE_2_PLAN.md  PHASE_3_PLAN.md  QUICK_START_GUIDE.md  QUICK_START_GUIDE_PYTHON.md  README.md  ROADMAP.md  ROADMAP_PYTHON.md  coverage.xml  pyproject.toml  pytest.ini  test_chat_integration.py  test_compression_simple.py  test_context_compression.py  test_context_simple.py  test_file_monitoring.py  test_file_monitoring_simple.py  test_importance_scoring.py  test_importance_scoring_fixed.py  test_importance_simple.py  test_reference_resolution.py  test_slash_commands.py  test_slash_imports.py  test_token_budgeting.py
.vibe_cache/: repo_map.json
plans/: PHASE_1_PLAN.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  PHASE_6_PLAN.md  PROGRESS_OVERVIEW.md  plan.md
test_results/: API_CLIENT_TEST_PHASE_1_COMPLETE.md
tests/: TESTING_INFRASTRUCTURE.md  conftest.py  test_conftest.py  test_infrastructure.py  test_mcp_manager.py
tests/test_analytics/: __init__.py  test_token_counter.py  test_types.py
tests/test_api/: __init__.py  test_anthropic_client.py  test_base.py  test_factory.py  test_generic_client.py  test_openai_client.py
tests/test_cli/: __init__.py  test_main.py
tests/test_commands/: __init__.py  test_chat.py  test_config_cmd.py  test_context_commands.py  test_file_ops.py  test_mcp_commands.py  test_mcp_tool_commands.py  test_model_provider_commands.py  test_security_commands.py  test_setup.py  test_slash_parser.py  test_test_cmd.py  test_voice_commands.py  test_web_commands.py  test_workflow_commands.py
tests/test_commands/test_slash_commands/: test_slash_base.py
tests/test_config/: test_api_types.py  test_env_handler.py  test_manager.py  test_types.py  test_validator.py
tests/test_healing/: __init__.py  test_auto_healer.py  test_types.py  test_validators.py
tests/test_integration/: __init__.py
tests/test_intelligence/: __init__.py  test_ast_analyzer.py  test_code_context.py  test_file_monitor.py  test_importance_scorer.py  test_reference_resolver.py  test_repo_mapper.py  test_token_budgeter.py  test_types.py
tests/test_performance/: __init__.py
tests/test_plugins/: test_base.py
tests/test_utils/: test_security_scanner.py  test_snippet_manager.py  test_template_engine.py
vibe_coder/: cli.py
vibe_coder/analytics/: __init__.py  cost_tracker.py  pricing.py  token_counter.py  types.py
vibe_coder/api/: __init__.py  anthropic_client.py  base.py  factory.py  generic_client.py  openai_client.py
vibe_coder/commands/: __init__.py  chat.py  config.py  setup.py  test.py
vibe_coder/commands/slash/: __init__.py  base.py  file_ops.py  git_ops.py  parser.py  project_analyzer.py  registry.py
vibe_coder/config/: env_handler.py  manager.py  validator.py
vibe_coder/healing/: __init__.py  auto_healer.py  types.py  validators.py
vibe_coder/intelligence/: __init__.py  ast_analyzer.py  code_context.py  file_monitor.py  importance_scorer.py  reference_resolver.py  repo_mapper.py  token_budgeter.py  types.py
vibe_coder/mcp/: __init__.py  manager.py
vibe_coder/plugins/: __init__.py  base.py  manager.py
vibe_coder/types/: api.py  config.py
vibe_coder/utils/: security_scanner.py  snippet_manager.py  template_engine.py
(+29 files in other folders)
