[tool.poetry]
name = "vibe-coder"
version = "0.1.0"
description = "A configurable CLI coding assistant that works with any AI API"
authors = ["Dustin Ober <dustin@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dustinober1/cli"
repository = "https://github.com/dustinober1/cli"
keywords = ["cli", "ai", "coding-assistant", "openai", "anthropic", "ollama"]
packages = [{include = "vibe_coder"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.0"}
questionary = "^2.0.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
dynaconf = "^3.2.0"
openai = "^1.0.0"
anthropic = "^0.34.0"
rich = "^13.0.0"
gitpython = "^3.1.40"
mcp = "^1.23.1"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-watch = "^4.2.0"
pytest-timeout = "^2.3.0"
pytest-html = "^4.1.0"
pytest-json-report = "^1.5.0"
factory-boy = "^3.3.0"
faker = "^22.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.0"
pre-commit = "^4.0.0"

[tool.poetry.scripts]
vibe-coder = "vibe_coder.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Note: Detailed pytest configuration is in pytest.ini
# This section provides minimal defaults for compatibility
